Rework mangadex. Refactor groups and authors/artists into their own tables. Bugfixes and cleanup due to refactoring.
